[TaskID]:Technical Enablement 35064: Spike - Sending MockFlag into Response

--- a/src/main/webapp/WEB-INF/spring/domain/stubs-properties/oeDomainNrgWsStubsConfig.properties
+++ b/src/main/webapp/WEB-INF/spring/domain/stubs-properties/oeDomainNrgWsStubsConfig.properties
@@ -9,3 +9,8 @@ NRGWS_OE_DOMAIN_SERVICE_INTERFACE=com.multibrand.domain.OEDomainPortBindingStub
 NRGWS_OE_DOMAIN_NAMESPACE_URI=http://domain.multibrand.com/
 NRGWS_OE_DOMAIN_PORT_NAME=OEDomainPort
 
+#config for validationDomainPort() AxisStubs
+NRGWS_VALIDATION_DOMAIN_SERVICE_INTERFACE=com.multibrand.domain.ValidationDomainPortBindingStub
+NRGWS_VALIDATION_DOMAIN_NAMESPACE_URI=http://domain.multibrand.com/
+NRGWS_VALIDATION_DOMAIN_PORT_NAME=OEDomainPort
+
