--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=6.2.0
-release.title=This is not a release but CI CD config.
-release.description=This is not a release but CI CD config. 
-release.date=07/02/2020
+release.version=6.3.0
+release.title=Reliant Sales - Mandatory SSN / TDL check 
+release.description=Reliant Sales - Mandatory SSN / TDL check for performPOSIDAndBPMatch and identity APIs
+release.date=07/09/2020
