--- a/pom.xml
+++ b/pom.xml
@@ -1067,6 +1067,13 @@
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.13</version>
-		</dependency>		
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.ws/spring-ws -->		
+		<dependency>
+            <groupId>org.springframework.ws</groupId>
+            <artifactId>spring-ws-core</artifactId>
+            <version>2.1.4.RELEASE</version>
+        </dependency>
+				
 	</dependencies>
 </project>
