GMD APP Promo code  update changes

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=6.3.0
-release.title=Reliant Sales - Mandatory SSN / TDL check 
-release.description=Reliant Sales - Mandatory SSN / TDL check for performPOSIDAndBPMatch and identity APIs
-release.date=07/09/2020
+release.version=7.1.0
+release.title=GMD API Release - TDSP Calendar Issue and promo code updated 
+release.description=GMD API Release - Fix for TDSP Calendar Issue and promo code updated.
+release.date=07/29/2020
