--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -25,11 +25,11 @@ ccs.tdsp.web.equivalent.D0009=03109
 
 
 ######################For GMD APP STARTS####################
-gmd.promo.web.equivalent.D0001=ZDYTKM
-gmd.promo.web.equivalent.D0002=ZDYTKM
-gmd.promo.web.equivalent.D0003=ZDYTKM
-gmd.promo.web.equivalent.D0004=ZDYTKM
-gmd.promo.web.equivalent.D0005=ZDYTKM
+gmd.promo.web.equivalent.D0001=XE5BPC
+gmd.promo.web.equivalent.D0002=XE5BPC
+gmd.promo.web.equivalent.D0003=XE5BPC
+gmd.promo.web.equivalent.D0004=XE5BPC
+gmd.promo.web.equivalent.D0005=XE5BPC
 
 gmd.offer.web.equivalent.D0001=00011231
 gmd.offer.web.equivalent.D0002=00011232
