--- a/pom.xml
+++ b/pom.xml
@@ -1003,8 +1003,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-oe-domain</artifactId>
-			<version>17-SNAPSHOT
-			</version>
+			<version>20</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
