--- a/pom.xml
+++ b/pom.xml
@@ -1085,19 +1085,19 @@
 		 <dependency>
 		    <groupId>org.apache.lucene</groupId>
 		    <artifactId>lucene-core</artifactId>
-		    <version>4.2.0</version>
+		    <version>3.5.0</version>
 		 </dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-queryparser -->
 			<dependency>
 			    <groupId>org.apache.lucene</groupId>
 			    <artifactId>lucene-queryparser</artifactId>
-			    <version>4.2.1</version>
+			    <version>3.5.0</version>
 			</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-analyzers-common -->
 			<dependency>
 			    <groupId>org.apache.lucene</groupId>
-			    <artifactId>lucene-analyzers-common</artifactId>
-			    <version>4.0.0</version>
+			    <artifactId>lucene-analyzers</artifactId>
+			    <version>3.5.0</version>
 			</dependency>
           <dependency>
 			<groupId>org.springframework</groupId>
