--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=7.1.0
-release.title=GMD API Release - TDSP Calendar Issue and promo code updated 
-release.description=GMD API Release - Fix for TDSP Calendar Issue and promo code updated.
-release.date=07/29/2020
+release.version=7.2.0
+release.title=XOOM ESID Validation 
+release.description=Added ESID Validation call
+release.date=09/17/2020
