Updating release notes

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=7.2.0
-release.title=XOOM ESID Validation 
-release.description=Added ESID Validation call
-release.date=09/17/2020
+release.version=9.1.1
+release.title=GMD app release
+release.description=1.)	Capturing GMD app enrollments information in to GME Choice Database.2.)	Monthly SAP Outage API information, This is similar to Reliant and NRG app. But we need to add additionally entry\u2019s into COMPONENT_OUTAGE table.3.)	Enhancement to GMD Statement API\u2019s .(Change to show all in rate)4.)	Preventing Duplicate enrollments by capturing the enrollment data into GME Choice Database
+release.date=09/24/2020
