--- a/src/main/resources/properties/db/dbsql.properties
+++ b/src/main/resources/properties/db/dbsql.properties
@@ -28,7 +28,7 @@ query.get.user.id=SELECT OLACT.USER_LOGIN_ID FROM OL_CA OLCA,OL_ACCOUNT OLACT WH
 # query.cirro.get.user.id=SELECT U.EMAIL FROM [CIRROCSS].[DBO].[CSS_USER_CSPS] AS C, [CIRROCSS].[DBO].[CSS_USERS] AS U WHERE C.CSS_USER_ID=U.CSS_USER_ID AND (C.CSP_ID=? OR C.CSP_ID=?);
 query.cirro.get.user.id=SELECT U.EMAIL FROM CSS_USER_CSPS AS C, CSS_USERS AS U WHERE C.CSS_USER_ID=U.CSS_USER_ID AND (C.CSP_ID=? OR C.CSP_ID=?);
 SP_UPDATE_USER_DETAILS=CSLR_MAIN.PKG_CSLR_ONLINE_USER_ADD.SP_UPDATE_USER_DETAILS
-db.tcs.personalizedflags.from.custbase =select cust_base.OWNERSHIP_FLG AS OWNERSHIP_FLG, cust_base.SECURITY_ELIGIBLE_FLG AS SECURITY_ELIGIBLE_FLG, cust_base.CASH_PAYMENTS_FLG AS CASH_PAYMENTS_FLG,cust_base.CONTR_ELAPSED_DAYS AS CONTR_ELAPSED_DAYS,cust_base.RELIANT_APP_USER_FLG AS RELIANT_APP_USER_FLG,cust_base.SECURITY_ACTIVE AS SECURITY_ACTIVE from TCS.DP_CUST_BASE cust_base where cust_base.BUS_PRTNR_ID = ? and cust_base.CONTR_ACCT_ID = ?
+db.tcs.personalizedflags.from.custbase =select cust_base.OWNERSHIP_FLG AS OWNERSHIP_FLG, cust_base.SECURITY_ELIGIBLE_FLG AS SECURITY_ELIGIBLE_FLG, cust_base.CASH_PAYMENTS_FLG AS CASH_PAYMENTS_FLG,cust_base.CONTR_ELAPSED_DAYS AS CONTR_ELAPSED_DAYS,cust_base.RELIANT_APP_USER_FLG AS RELIANT_APP_USER_FLG,cust_base.SECURITY_ACTIVE AS SECURITY_ACTIVE from TCS.DP_CUST_BASE cust_base where cust_base.BUS_PRTNR_ID = ? and cust_base.CONTR_ACCT_ID = ? and cust_base.CONTR_ID = ?
 
 sqlQuery.savePrivacyPreferenceSignUp=INSERT INTO SOLPREF.SOLICITATION_PREF (SMAIL_PREF_FLAG, PHONECALL_PREF_FLAG, EMAIL_PREF_FLAG, CUSTOMER_TYPE, BUSINESS_NAME, FIRST_NAME, LAST_NAME, ADDRESS_LN1, ADDRESS_LN2, CITY, STATE, ZIP_CD, PHONE_NUMBER, EMAIL_ADDRESS, COMPANY_CODE) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 # US-F222-DK-10312018-DK_MBAR
