Commiting for code merge

--- a/pom.xml
+++ b/pom.xml
@@ -1097,5 +1097,23 @@
 			<artifactId>jersey-multipart</artifactId>
 			<version>1.17.1</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.lucene</groupId>
+		    <artifactId>lucene-core</artifactId>
+		    <version>3.5.0</version>
+		 </dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-queryparser -->
+			<dependency>
+			    <groupId>org.apache.lucene</groupId>
+			    <artifactId>lucene-queryparser</artifactId>
+			    <version>3.5.0</version>
+			</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-analyzers-common -->
+			<dependency>
+			    <groupId>org.apache.lucene</groupId>
+			    <artifactId>lucene-analyzers</artifactId>
+			    <version>3.5.0</version>
+			</dependency>		
 	</dependencies>
 </project>
