--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -12,6 +12,7 @@ CCSUSERNAME=WEBCPIC
 
 http.max.connection.per.route = 50
 http.max.total.connection = 50
+http.stocket.connection.timeout = 45
 
 #Salesforce
 salesforce.grant.type=password
