Updated release notes

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=9.1.1
+release.version=9.2.0
 release.title=GMD app release
-release.description=1.)	Capturing GMD app enrollments information in to GME Choice Database.2.)	Monthly SAP Outage API information, This is similar to Reliant and NRG app. But we need to add additionally entry\u2019s into COMPONENT_OUTAGE table.3.)	Enhancement to GMD Statement API\u2019s .(Change to show all in rate)4.)	Preventing Duplicate enrollments by capturing the enrollment data into GME Choice Database
-release.date=09/24/2020
+release.description=1.) GMD cancel membership 2.) Enable push notification for GMD app
+release.date=09/30/2020
