--- a/pom.xml
+++ b/pom.xml
@@ -1014,7 +1014,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-profile-domain</artifactId>
-			<version>15</version>
+			<version>23-SNAPSHOT</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
@@ -1039,13 +1039,13 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-swap-domain</artifactId>
-			<version>2</version>
+			<version>7-SNAPSHOT</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-tos-domain</artifactId>
-			<version>2</version>
+			<version>8-SNAPSHOT</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
