--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -130,7 +130,7 @@ GME.MYACCOUNT.PASSWORD.RESET.URL=https://myaccount-test.greenmountain.com/ResetP
 #Content server props
 gm.content.server.endpoint.url=http://txaixebxindxs01:13180/cd-service/gme/cdws/odata.svc/
 content.rest.server.url =http://txaixebxindxs02:13180/contentService/content/getContentData
-re.content.server.endpoint.url=http://txaixebnbld01:8081/client/v2/content.svc/
+re.content.server.endpoint.url=https://stg-content.nrg.com/reliant/content/client/v2/content.svc/
 pw.content.server.endpoint=http://txaixebnbld01:18081/client/v2/content.svc/
 ce.content.server.endpoint=http://txaixebxindxd01:13180/cd-service/cirro/cdws/odata.svc/
 
@@ -244,6 +244,7 @@ gmd.offer.predis.equivalent.D0005=090175168088b0cc
 content.server.endpoint.url=http://txaixebnbld01.retail.nrgenergy.com:18081/client/v2/content.svc/
 #File
 documentum.endpoint=https://dev-texas.xoomenergy.com/files/{0}.pdf
+documentum.efl.endpoint=https://dev-texas.xoomenergy.com{0}
 custom.inv.error.message=We're sorry, but we were unable to retrieve your document. Please try again later.
 doc.inv.url.timeout=20
 duplicate.payment.check =X
