--- a/pom.xml
+++ b/pom.xml
@@ -1002,7 +1002,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-oe-domain</artifactId>
-			<version>23-SNAPSHOT</version>
+			<version>25</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
@@ -1051,7 +1051,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-validation-domain</artifactId>
-			<version>10-SNAPSHOT</version>
+			<version>10</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 
