--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=9.2.0
-release.title=GMD app release
-release.description=1.) GMD cancel membership 2.) Enable push notification for GMD app
-release.date=09/30/2020
+release.version=19.14.0
+release.title=ERCOT Implementation
+release.description=ERCOT Implementation
+release.date=10/29/2020
