feat (PBI 53655) : [GME SMB] product chart - add business company code for gme in properties file

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -69,3 +69,6 @@ paymentextension.bypass.eligible.flag =
 dpp.bypass.eligible.flag = X
 dpp.default.flag = X
 dpp.no.of.installments=5
+
+## Brand name mapping for GME SMB
+0270 = GR
