--- a/pom.xml
+++ b/pom.xml
@@ -1008,7 +1008,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-profile-domain</artifactId>
-			<version>15</version>
+			<version>23-SNAPSHOT</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
