feat (PBI 53655) :  MBAR: Sprint 21 - GME GET SMB OFFERS REST CALL IMPL

--- a/pom.xml
+++ b/pom.xml
@@ -1003,7 +1003,7 @@
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-oe-domain</artifactId>
 
-			<version>25</version>
+			<version>28-SNAPSHOT</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
