--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=19.14.0
-release.title=ERCOT Implementation
-release.description=ERCOT Implementation
-release.date=10/29/2020
+release.version=19.15.0
+release.title=GMD Phase II Implementation
+release.description=GMD Phase II Implementation
+release.date=11/30/2020
