--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,5 @@
-variables:
-  release_notes_wiki_path: NRG-Rest-Services/release-notes.md  # <app-name>/release-notes.md
-
-resources:
-  repositories:
-    - repository: templates
-      type: git
-      name: Digital-IT-Projects/azure-build-templates
 
 pool:
-  #vmImage: 'ubuntu-16.04'
   name: '$(param.agent.pool.name)'  
 
 trigger:
@@ -23,23 +14,31 @@ trigger:
 
 stages:
   - stage:
-    displayName: Checkout
+    displayName: Build and Scan
     jobs:
-      - job:
-        displayName: Checkout App
-
-  - stage:
-    displayName: Generate release notes N trigger Jenkins
-    jobs:
-      - template: create_release_notes_n_autotag.yml@templates
-
-      - job:
-        displayName: Trigger Jenkins
+      - job: Build
+        displayName: Build
         steps:
-          - task: JenkinsQueueJob@2
-            displayName: 'Queue Jenkins job: Services/nrg-rest-services'
-            inputs:
-              serverEndpoint: 'Prod Jenkins'
-              jobName: 'Services/nrg-rest-services'
-              isMultibranchJob: true
-              multibranchPipelineBranch: '$(Build.SourceBranch)'
+        - task: Maven@3
+          inputs:
+            mavenPomFile: 'pom.xml'
+            mavenOptions: '-Xmx512m'
+            goals: 'clean dependency:copy-dependencies package -Pserver-profile -U -T 1C'
+            publishJUnitResults: true
+            testResultsFiles: '**/surefire-reports/TEST-*.xml'
+            javaHomeOption: 'JDKVersion'
+            mavenVersionOption: 'Default'
+            mavenAuthenticateFeed: false
+            effectivePomSkip: true
+            sonarQubeRunAnalysis: false
+            sqMavenPluginVersionChoice: 'latest'
+        - task: CopyFiles@2
+          displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+          inputs:
+            SourceFolder: '$(System.DefaultWorkingDirectory)'
+            Contents: '**/dependency/*.jar'
+            TargetFolder: '$(Build.ArtifactStagingDirectory)'
+        - task: WhiteSource Bolt@20
+          displayName: 'WhiteSource Scan for $(Build.Repository.Name)'
+          inputs:
+            cwd: '$(Build.ArtifactStagingDirectory)'
