--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -70,7 +70,7 @@ ws.endpointURL.addressvalidationDomain=http://dev1-ws.nrgenergy.com/NRGWS02/Addr
 ws.endpointURL.billingDomain=http://dev1-ws.nrgenergy.com/NRGWS02/BillingDomain
 ws.endpointURL.historyDomain=http://dev1-ws.nrgenergy.com/NRGWS02/HistoryDomain
 ws.endpointURL.ldapDomain=http://dev1-ws.nrgenergy.com/NRGWS02/LDAPDomain
-ws.endpointURL.oeDomain=http://stg1-ws.nrgenergy.com/NRGWS02/OEDomain
+ws.endpointURL.oeDomain=http://dev1-ws.nrgenergy.com/NRGWS02/OEDomain
 ws.endpointURL.paymentDomain=http://dev1-ws.nrgenergy.com/NRGWS02/PaymentDomain
 ws.endpointURL.profileDomain=http://dev1-ws.nrgenergy.com/NRGWS02/ProfileDomain
 ws.endpointURL.swapDomain=http://dev1-ws.nrgenergy.com/NRGWS02/SwapDomain
@@ -108,6 +108,9 @@ ws.rest.ccs.update.cslr.billing.address.at.bp.level.url=http://sapcmq02:8001/sap
 ccs.tpv.api.trans.upd.wsdl.url=http://sapcmd02:8000/sap/bc/srt/rfc/sap/z_e_news_tpv_api_trans_upd/520/z_e_news_tpv_api_trans_upd/z_e_news_tpv_api_trans_upd_bind
 #################
 
+###### CREATE BPACA  Account in SAP
+CCS_BPACA_CREATE = http://saprd101.retail.nrgenergy.com:8000/sap/bc/srt/scs/sap/z_e_isu_nei_create_bp_ca?sap-client=130
+
 ws.rest.ccs.read.reliant.customer.status.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_CUSTOMER_ACTIVE_CHECK_SRV/CustomerDetailsSet(EmailId={0},FirstName={1},LastName={2},Street={3},HouseNo={4},ApartmentNo={5},City={6},State={7},Zipcode={8})?sap-client=53024format=json
 ws.rest.ccs.check.security.eligibility.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_DT_REQUEST_SRV/SecurityZipEligiblitySet(ZipCode={0})?sap-client=53024format=json
 
@@ -135,7 +138,7 @@ GME.MYACCOUNT.PASSWORD.RESET.URL=https://myaccount-test.greenmountain.com/ResetP
 gm.content.server.endpoint.url=http://txaixebxindxs01:13180/cd-service/gme/cdws/odata.svc/
 content.rest.server.url =http://txaixebxindxs02:13180/contentService/content/getContentData
 re.content.server.endpoint.url=http://dev-content.nrg.com/reliant/content/client/v2/content.svc/
-pw.content.server.endpoint=http://txaixebnbld01:18081/client/v2/content.svc/
+pw.content.server.endpoint=https://dev-content.nrg.com/mb/content/client/v2/content.svc/
 ce.content.server.endpoint=http://txaixebxindxd01:13180/cd-service/cirro/cdws/odata.svc/
 
 #Tempalte Id's
@@ -198,6 +201,9 @@ CCS_GMD_STMT = http://saprpm01:8080/sap/bc/srt/rfc/sap/z_e_isu_get_gmd_stmt/900/
 CCS_PRICE_STMT = http://saprpm01:8080/sap/bc/srt/rfc/sap/z_e_isu_get_gmd_price/900/z_e_isu_get_gmd_price/z_e_isu_get_gmd_price
 CCS_CREATE_MOVE_OUT=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_create_moveout?sap-client=900
 CCS_GMD_PRICE_SPIKE_ALERT=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_gmd_price_spike_alert?sap-client=900
+CCS_GMD_MD_STMT=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_get_gmd_md_stmt?sap-client=900
+CCS_GMD_LMP_PRICE_SPIKE=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_gmd_lmp_price_spike?sap-client=900
+CCS_GMD_HOURHEAD_SPIKE=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_gmd_hour_ahead_spike?sap-client=900
 gmd_price_current_date =04/14/2020					 
 CRM_KBA_MATRIX = http://sapcmq02:8001/sap/bc/srt/scs/sap/z_e_crm_kba_matrix_update?sap-client=530
 
@@ -248,9 +254,19 @@ gmd.offer.predis.equivalent.D0005=090175168088b0cc
 content.server.endpoint.url=http://txaixebnbld01.retail.nrgenergy.com:18081/client/v2/content.svc/
 #File
 documentum.endpoint=https://dev-texas.xoomenergy.com/files/{0}.pdf
+documentum.efl.endpoint=https://dev-texas.xoomenergy.com{0}
 custom.inv.error.message=We're sorry, but we were unable to retrieve your document. Please try again later.
 doc.inv.url.timeout=20
 
+# Lucene Search Engine Index Files Directory Location
+lucene.indexed.dir=/apps01/files/stream/address/lucene
 duplicate.payment.check =X
+
+# Adode Analytics
+adobe.analytic.template.url=https://reliantenergy.sc.omtrdc.net/b/ss/[ReportSuite]/0?
+template.url.query.list.parameter.one=AQB=1&ndh=1&pageName=myaccount:swap:notification&ch=App%20API&server=api.[BRAND].com&vid=[CANumber]&c.&mycocode=[CompanyCode]&myca=[CANumber]&mymsgid=[MsgId]
+template.url.query.list.parameter.two=&myreaddt=[ActionDate]&mymsgtype=[MessageType]&mymsgcat=[MessageCat]&mymsg=[Message]&mymsgstatus=[MsgStatus]&mylang=[Language]&myos=[OSType]&mycontractid=[ContractId]&mybp=[BPNumber]&msginstance=[msgInstance]&myerrmsg=[ErrorMessage]&.c&AQE=1
+template.url.parameter.reportsuite=relengmemobile.appstage
+iot.post.url = http://txaixsexbls05/iotproxy/postServiceRequest
 
 ws.rest.iot.ercot.check.by.address.url=http://txaixsexbls05/iotproxy/ercot/getByAddress
