--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -10,6 +10,8 @@ default.env=LOCAL
 CCSPASSWORD=CustAlrt01
 CCSUSERNAME=WEBCPIC
 
+
+
 http.max.connection.per.route = 50
 http.max.total.connection = 50
 http.stocket.connection.timeout = 15
@@ -109,7 +111,7 @@ ccs.tpv.api.trans.upd.wsdl.url=http://sapcmd02:8000/sap/bc/srt/rfc/sap/z_e_news_
 #################
 
 ###### CREATE BPACA  Account in SAP
-CCS_BPACA_CREATE = http://saprd101.retail.nrgenergy.com:8000/sap/bc/srt/scs/sap/z_e_isu_nei_create_bp_ca?sap-client=130
+CCS_BPACA_CREATE = http://saprpm01.reinternal.com:8080/sap/bc/srt/rfc/sap/z_e_isu_nei_create_bp_ca/900/z_e_isu_nei_create_bp_ca/z_e_isu_nei_create_bp_ca_bind
 
 ws.rest.ccs.read.reliant.customer.status.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_CUSTOMER_ACTIVE_CHECK_SRV/CustomerDetailsSet(EmailId={0},FirstName={1},LastName={2},Street={3},HouseNo={4},ApartmentNo={5},City={6},State={7},Zipcode={8})?sap-client=53024format=json
 ws.rest.ccs.check.security.eligibility.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_DT_REQUEST_SRV/SecurityZipEligiblitySet(ZipCode={0})?sap-client=53024format=json
