--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -108,10 +108,9 @@ xi.history.endpointURL=http://sapxiq02:8001/sap/xi/adapter_plain?namespace=http:
 ws.rest.ccs.get.cslr.profile.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_SOLAR_ARGREEMENT_SRV/SolarArDetailsSet(LeaseId={0},Partner={1},ContractAcct={2})?sap-client=530&%24format=json;
 ws.rest.ccs.update.cslr.billing.address.at.bp.level.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_BP_BILL_ADDRESS_UPDATE_SRV/BPDetailsSet(Addrnumber={0},City1={1},Country={2},HouseNum1={3},HouseNum2={4},LeaseId={5},NameCo={6},Partner={7},PostCode1={8},PoBox={9},Region={10},Street={11},Vkont={12})?&$format=json
 ccs.tpv.api.trans.upd.wsdl.url=http://sapcmd02:8000/sap/bc/srt/rfc/sap/z_e_news_tpv_api_trans_upd/520/z_e_news_tpv_api_trans_upd/z_e_news_tpv_api_trans_upd_bind
+###### NEI CCS CREATE BPCA  URL
+ccs.nei.bpca.create=http://saprpm01.reinternal.com:8080/sap/bc/srt/rfc/sap/z_e_isu_nei_create_bp_ca/900/z_e_isu_nei_create_bp_ca/z_e_isu_nei_create_bp_ca_bind
 #################
-
-###### CREATE BPACA  Account in SAP
-CCS_BPACA_CREATE = http://saprpm01.reinternal.com:8080/sap/bc/srt/rfc/sap/z_e_isu_nei_create_bp_ca/900/z_e_isu_nei_create_bp_ca/z_e_isu_nei_create_bp_ca_bind
 
 ws.rest.ccs.read.reliant.customer.status.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_CUSTOMER_ACTIVE_CHECK_SRV/CustomerDetailsSet(EmailId={0},FirstName={1},LastName={2},Street={3},HouseNo={4},ApartmentNo={5},City={6},State={7},Zipcode={8})?sap-client=53024format=json
 ws.rest.ccs.check.security.eligibility.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_DT_REQUEST_SRV/SecurityZipEligiblitySet(ZipCode={0})?sap-client=53024format=json
