--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,8 @@ sonar.projectKey=nrg-rest-services
 sonar.branch.name=${env.BRANCH_NAME}
 sonar.branch.target=master
 sonar.tests=src/test
-sonar.exclusions=src/main/webapp/**
+sonar.exclusions=
+sonar.coverage.exclusions=src/main/webapp/**
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.junit.reportPaths=target/surefire-reports
 sonar.java.binaries=target/classes
