--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=19.15.0
-release.title=GMD Phase II Implementation
-release.description=GMD Phase II Implementation
-release.date=11/30/2020
+release.version=19.16.0
+release.title=Sales Offer Details TDSP API and Sonar Fixes
+release.description=Offer Details TDSP API and Sonar Fixes
+release.date=12/10/2020
