--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -66,6 +66,6 @@ pw.taxonomy.id = TODO
 ce.taxonomy.id = TODO
 gm.taxonomy.id = TODO
 paymentextension.bypass.eligible.flag =
-dpp.bypass.eligible.flag = X
+dpp.bypass.eligible.flag = 
 dpp.default.flag = X
 dpp.no.of.installments=5
