--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -251,6 +251,7 @@ gmd.offer.predis.equivalent.D0005=090175168088b0cc
 content.server.endpoint.url=http://txaixebnbld01.retail.nrgenergy.com:18081/client/v2/content.svc/
 #File
 documentum.endpoint=https://dev-texas.xoomenergy.com/files/{0}.pdf
+documentum.efl.endpoint=https://dev-texas.xoomenergy.com{0}
 custom.inv.error.message=We're sorry, but we were unable to retrieve your document. Please try again later.
 doc.inv.url.timeout=20
 
