--- a/pom.xml
+++ b/pom.xml
@@ -842,8 +842,8 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<!-- <version>2.8.2</version> -->
-			<version>1.7.1</version>
+			<version>2.8.2</version>
+			<!-- <version>1.7.1</version> -->
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -935,7 +935,7 @@
  		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-ccs-ws-client-nrg-rest</artifactId>
-			<version>16</version>
+			<version>17-SNAPSHOT</version>
 
  		</dependency>
 		<dependency>
@@ -1115,6 +1115,13 @@
 			    <groupId>org.apache.lucene</groupId>
 			    <artifactId>lucene-analyzers</artifactId>
 			    <version>3.5.0</version>
-			</dependency>		
+			</dependency>	
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->	
+			<dependency>
+    			<groupId>io.rest-assured</groupId>
+    			<artifactId>rest-assured</artifactId>
+    			<version>3.0.2</version>
+    			<scope>test</scope>
+			</dependency>
 	</dependencies>
 </project>
