--- a/pom.xml
+++ b/pom.xml
@@ -633,6 +633,11 @@
 			<artifactId>com.nrg.services.clients.nei</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.6</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
