--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=19.16.0
-release.title=Sales Offer Details TDSP API and Sonar Fixes
-release.description=Offer Details TDSP API and Sonar Fixes
-release.date=12/10/2020
+release.version=20.0.0
+release.title=EFL Changes
+release.description=EFL Changes
+release.date=01/29/2021
