--- a/pom.xml
+++ b/pom.xml
@@ -1011,7 +1011,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-profile-domain</artifactId>
-			<version>24-SNAPSHOT</version>
+			<version>24</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
@@ -1036,13 +1036,13 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-swap-domain</artifactId>
-			<version>8-SNAPSHOT</version>
+			<version>8</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-tos-domain</artifactId>
-			<version>8-SNAPSHOT</version>
+			<version>8</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
