--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=20.0.1
-release.title=Cirro, Discount Power Affiliate Offers Display Fix
-release.description=Cirro, Discount Power Affiliate Offers Display Fix
-release.date=02/08/2021
+release.version=20.0.2
+release.title=Cirro, Discount Power Affiliate Offers Tdsp charge Fix
+release.description=Cirro, Discount Power Affiliate Offers Tdsp charge Fix
+release.date=02/12/2021
