--- a/src/main/resources/properties/db/dbsql.properties
+++ b/src/main/resources/properties/db/dbsql.properties
@@ -55,4 +55,4 @@ proc.getesiidInfo=ESI.SPK_GET_ESI.get_esidetails
 db.choice.reliant.updateerrorinsla= update CHOICE.SERVICE_LOCATION_AFFILIATE set ERROR_CD=?,ERROR_CD_LIST=? where TRACKING_NUMBER= ? AND GUID_ID =?
 db.tcs.personalizedflags.from.custbase =select cust_base.OWNERSHIP_FLG AS OWNERSHIP_FLG, cust_base.SECURITY_ELIGIBLE_FLG AS SECURITY_ELIGIBLE_FLG, cust_base.CASH_PAYMENTS_FLG AS CASH_PAYMENTS_FLG,cust_base.CONTR_ELAPSED_DAYS AS CONTR_ELAPSED_DAYS,cust_base.RELIANT_APP_USER_FLG AS RELIANT_APP_USER_FLG,cust_base.SECURITY_ACTIVE AS SECURITY_ACTIVE from TCS.DP_CUST_BASE cust_base where cust_base.BUS_PRTNR_ID = ? and cust_base.CONTR_ACCT_ID = ? and cust_base.CONTR_ID = ?
 
-query.get.smart.car.profile.sqlQuery = SELECT ACCESS_TOKEN, VEHICLE_ID  FROM SMARTIOT_MAIN.SMART_CAR_USER USR,SMART_CAR_VEHICLE_ATTRIBUTES ATTR WHERE  USR.USER_UNIQUE_ID = ATTR.USER_UNIQUE_ID AND USR.USER_UNIQUE_ID = ?
+query.get.smart.car.profile.sqlQuery = SELECT ACCESS_TOKEN, VEHICLE_ID  FROM SMARTIOT_MAIN.SMART_CAR_USER USR,SMARTIOT_MAIN.SMART_CAR_VEHICLE_ATTRIBUTES ATTR WHERE  USR.USER_UNIQUE_ID = ATTR.USER_UNIQUE_ID AND USR.USER_UNIQUE_ID = ?
