--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=20.0.2
-release.title=Cirro, Discount Power Affiliate Offers Tdsp charge Fix
-release.description=Cirro, Discount Power Affiliate Offers Tdsp charge Fix
-release.date=02/12/2021
+release.version=20.5.0
+release.title=Personalization service changes for polr customers
+release.description=Personalization service changes for polr customers - reading plor flag from TCS DB
+release.date=03/04/2021
