--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=20.5.0
-release.title=Personalization service changes for polr customers
-release.description=Personalization service changes for polr customers - reading plor flag from TCS DB
-release.date=03/04/2021
+release.version=20.2.0
+release.title=Personalization service changes for SMB polr customers
+release.description=Personalization service changes for SMB polr customers - reading plor flag from TCS DB
+release.date=03/11/2021
