--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>3.0.0-M5</version>
 				<configuration>
 					<argLine>${argLine} -XX:-UseSplitVerifier -Xmx128m</argLine>
 					<reportsDirectory>${basedir}/target/surefire-reports/</reportsDirectory>
@@ -170,7 +170,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>3.0.0-M5</version>
 				<configuration>
 					<skipITs>${skip.integration.tests}</skipITs>
 					<reportsDirectory>${basedir}/target/failsafe-reports/</reportsDirectory>
@@ -542,7 +542,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.3</version>
+				<version>0.8.5</version>
 				<executions>
 					<!-- Prepares the property pointing to the JaCoCo runtime agent which 
 						is passed as VM argument when Maven the Surefire plugin is executed. -->
