--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,11 @@
-sonar.projectName=nrg-rest-services
 sonar.projectVersion=1-RELEASE
-sonar.projectKey=nrg-rest-services
-sonar.branch.name=${env.BRANCH_NAME}
-sonar.branch.target=master
+sonar.sources=src/main
 sonar.tests=src/test
-sonar.exclusions=src/main/webapp/**
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.junit.reportPaths=target/surefire-reports
 sonar.java.binaries=target/classes
 sonar.java.test.binaries=target/test-classes
-sonar.sources=src/main
-sonar.java.libraries=target/nrgrest/WEB-INF/lib
+#sonar.java.libraries=target/nrgrest/WEB-INF/lib
+sonar.java.libraries=target/dependency
+sonar.coverage.exclusions=src/main/webapp/**
+sonar.exclusions=
