Strax Invoice and Cancel contract changes

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -278,3 +278,5 @@ adobe.messageId.message = Your contract will expire on [date].Log on to find cle
 
 # Lucene Search Engine Index Files Directory Location
 lucene.indexed.dir=/apps01/files/stream/address/lucene
+
+ws.endpointURL.securityAccountsDomain=http://dev1-ws.nrgenergy.com/NRGWS02/SecurityAccountsDomain
