--- a/pom.xml
+++ b/pom.xml
@@ -1060,7 +1060,12 @@
 		  <artifactId>nrg-ccs-ws-client-nei-paypal</artifactId>
 		  <version>1.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.nrg.services.clients</groupId>
+			<artifactId>nrg-securityaccounts-domain</artifactId>
+			<version>1-SNAPSHOT</version>
+			<scope>${dependency.scope}</scope>
+		</dependency>
 		<!--END: WS Client -->	
 		<!-- https://mvnrepository.com/artifact/org.formcept/sqljdbc4 -->
 		<dependency>
