--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -280,3 +280,6 @@ adobe.messageId.message = Your contract will expire on [date].Log on to find cle
 
 # Lucene Search Engine Index Files Directory Location
 lucene.indexed.dir=/apps01/files/stream/address/lucene
+
+#Strax Integration
+ws.endpointURL.securityAccountsDomain=http://dev1-ws.nrgenergy.com/NRGWS02/SecurityAccountsDomain
