--- a/pom.xml
+++ b/pom.xml
@@ -999,7 +999,7 @@
 		<dependency>
 			<groupId>com.nrg.services.clients</groupId>
 			<artifactId>nrg-oe-domain</artifactId>
-			<version>30-SNAPSHOT</version>
+			<version>29</version>
 			<scope>${dependency.scope}</scope>
 		</dependency>
 		<dependency>
