Updated Release notes

--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=20.2.0
-release.title=Personalization service changes for SMB polr customers
-release.description=Personalization service changes for SMB polr customers - reading plor flag from TCS DB
-release.date=03/11/2021
+release.version=20.4.0
+release.title=Smart Car APi relatred chnages, Amex Card Soft Launch and LDAP user and password chnages for ocsadmi1
+release.description=Smart Car APi relatred chnages, Amex Card Soft Launch and LDAP user and password chnages for ocsadmi1
+release.date=04/14/2021
