--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=20.4.0
-release.title=Smart Car APi relatred chnages, Amex Card Soft Launch and LDAP user and password chnages for ocsadmi1
-release.description=Smart Car APi relatred chnages, Amex Card Soft Launch and LDAP user and password chnages for ocsadmi1
-release.date=04/14/2021
+release.version=20.4.1
+release.title=Reliant OAM changes
+release.description=Modified the sql to pull additional flag from personalization table
+release.date=04/29/2021
