--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=20.5.0
-release.title=PERBC
-release.description=Personalization service updated for PERBC changes
-release.date=04/29/2021
+release.version=20.6.0
+release.title=Sales Suerty Bond Changes
+release.description=Sales Suerty Bond Changes
+release.date=05/04/2021
