--- a/src/main/resources/properties/db/dbsql.properties
+++ b/src/main/resources/properties/db/dbsql.properties
@@ -57,3 +57,6 @@ db.tcs.personalizedflags.from.custbase =select cust_base.OWNERSHIP_FLG AS OWNERS
 db.tcs.personalizedflags.from.custbase.smb=select cust_base.POLR_CUST AS POLR_CUST from TCS.DP_CUST_BASE_SMB cust_base where cust_base.BUS_PRTNR_ID = ? and cust_base.CONTR_ACCT_ID = ? and cust_base.CONTR_ID = ?
 
 query.get.smart.car.profile.sqlQuery = SELECT ACCESS_TOKEN, VEHICLE_ID  FROM SMARTIOT_MAIN.SMART_CAR_USER USR,SMARTIOT_MAIN.SMART_CAR_VEHICLE_ATTRIBUTES ATTR WHERE  USR.USER_UNIQUE_ID = ATTR.USER_UNIQUE_ID AND USR.USER_UNIQUE_ID = ?
+
+
+db.cpdb.sms.select.profile.get.bp.number=select bpca.business_partner_id from bpca bpca,ol_ca olca where bpca.contract_account_number=olca.contract_account_number and olca.user_unique_id in (select user_unique_id from ol_account where lower(user_login_id)=LOWER({0}))
