--- a/src/test/resources/properties/environment.properties
+++ b/src/test/resources/properties/environment.properties
@@ -2,10 +2,17 @@
 #Environment Properties file
 ##########################################
 
+#### Build related properties
+default.env=LOCAL
+
 ####### Credentials
 #CCS user name and password
 CCSPASSWORD=CustAlrt01
 CCSUSERNAME=WEBCPIC
+
+http.max.connection.per.route = 50
+http.max.total.connection = 50
+http.stocket.connection.timeout = 15
 
 #Salesforce
 salesforce.grant.type=password
@@ -15,8 +22,8 @@ salesforce.username=salesforce.api@nrgenergy.com.servicemax
 salesforce.user.password=Res!dent!@1
 
 #LDAP BIND USER
-LDAP_ADMIN_UID=uid=ocsadmin,ou=cagroup,o=admin
-LDAP_ADMIN_UID_CSLR=uid=ocsadmin,ou=cagroup,o=admin
+LDAP_ADMIN_UID=uid=ocsadmin1,ou=cagroup,o=admin
+LDAP_ADMIN_UID_CSLR=uid=ocsadmin1,ou=cagroup,o=admin
 
 #LDAP URLS
 LDAP_PROVIDER_URL=ldap://txaixdocud03:21391
@@ -101,7 +108,8 @@ ws.rest.ccs.update.cslr.billing.address.at.bp.level.url=http://sapcmq02:8001/sap
 ccs.tpv.api.trans.upd.wsdl.url=http://sapcmd02:8000/sap/bc/srt/rfc/sap/z_e_news_tpv_api_trans_upd/520/z_e_news_tpv_api_trans_upd/z_e_news_tpv_api_trans_upd_bind
 #################
 
-CCS_NEI_PAYPAL=http://saprpm01:8080/sap/bc/srt/rfc/sap/z_e_isu_nei_paypal_payment/900/z_e_isu_nei_paypal_payment/z_e_isu_nei_paypal_payment
+CCS_NEI_PAYPAL=http://saprpm01.reinternal.com:8080/sap/bc/srt/rfc/sap/z_e_isu_nei_paypal_payment/900/z_e_isu_nei_paypal_payment/z_e_isu_nei_paypal_payment
+
 
 ws.rest.ccs.read.reliant.customer.status.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_CUSTOMER_ACTIVE_CHECK_SRV/CustomerDetailsSet(EmailId={0},FirstName={1},LastName={2},Street={3},HouseNo={4},ApartmentNo={5},City={6},State={7},Zipcode={8})?sap-client=53024format=json
 ws.rest.ccs.check.security.eligibility.url=http://sapcmq02:8001/sap/opu/odata/sap/ZE_WEB_DT_REQUEST_SRV/SecurityZipEligiblitySet(ZipCode={0})?sap-client=53024format=json
@@ -129,8 +137,8 @@ GME.MYACCOUNT.PASSWORD.RESET.URL=https://myaccount-test.greenmountain.com/ResetP
 #Content server props
 gm.content.server.endpoint.url=http://txaixebxindxs01:13180/cd-service/gme/cdws/odata.svc/
 content.rest.server.url =http://txaixebxindxs02:13180/contentService/content/getContentData
-re.content.server.endpoint.url=http://txaixebnbld01:8081/client/v2/content.svc/
-pw.content.server.endpoint=http://txaixebnbld01:18081/client/v2/content.svc/
+re.content.server.endpoint.url=http://dev-content.nrg.com/reliant/content/client/v2/content.svc/
+pw.content.server.endpoint=https://dev-content.nrg.com/mb/content/client/v2/content.svc/
 ce.content.server.endpoint=http://txaixebxindxd01:13180/cd-service/cirro/cdws/odata.svc/
 
 #Tempalte Id's
@@ -142,6 +150,9 @@ ce.tempalte.id_desktop=884
 ce.tempalte.id_mobile=TODO
 gm.tempalte.id_desktop=6974
 gm.tempalte.id_mobile=TODO
+gme.tempalte.id_desktop=884
+rel.tempalte.id_desktop=941
+
 
 #Publication Id's
 re.pub.id_en=84
@@ -191,8 +202,56 @@ contractAccountNumberRetro=000000000000
 #//START : GMD APIS
 CCS_GMD_STMT = http://saprpm01:8080/sap/bc/srt/rfc/sap/z_e_isu_get_gmd_stmt/900/z_e_isu_get_gmd_stmt/z_e_isu_get_gmd_stmt
 CCS_PRICE_STMT = http://saprpm01:8080/sap/bc/srt/rfc/sap/z_e_isu_get_gmd_price/900/z_e_isu_get_gmd_price/z_e_isu_get_gmd_price
-CCS_CREATE_MOVE_OUT=http://saprpm01.reinternal.com:8080/sap/bc/srt/scs/sap/z_e_isu_create_moveout?sap-client=900
+CCS_CREATE_MOVE_OUT=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_create_moveout?sap-client=900
+CCS_GMD_PRICE_SPIKE_ALERT=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_gmd_price_spike_alert?sap-client=900
+CCS_GMD_MD_STMT=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_get_gmd_md_stmt?sap-client=900
+CCS_GMD_LMP_PRICE_SPIKE=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_gmd_lmp_price_spike?sap-client=900
+CCS_GMD_HOURHEAD_SPIKE=http://saprpm01:8080/sap/bc/srt/scs/sap/z_e_isu_gmd_hour_ahead_spike?sap-client=900
+CCS_GMD_PUSH_NOTIFICATION_PREF_READ=http://sapcmq02:8080/sap/bc/srt/scs/sap/z_e_crm_gmd_read_push_pref?sap-client=530
+CCS_GMD_PUSH_NOTIFICATION_PREF_UPDATE=http://sapcmq02:8080/sap/bc/srt/scs/sap/z_e_crm_gmd_update_push_pref?sap-client=530
 gmd_price_current_date =04/14/2020					 
+CRM_KBA_MATRIX = http://sapcmq02:8001/sap/bc/srt/scs/sap/z_e_crm_kba_matrix_update?sap-client=530
+
+######################For GMD APP STARTS####################
+gmd.promo.web.equivalent.D0001=ZBZBKZ
+gmd.promo.web.equivalent.D0002=ZBZBM0
+gmd.promo.web.equivalent.D0003=ZBZBM3
+gmd.promo.web.equivalent.D0004=ZBZBM1
+gmd.promo.web.equivalent.D0005=ZBZBM2
+
+gmd.offer.web.equivalent.D0001=11071
+gmd.offer.web.equivalent.D0002=11072
+gmd.offer.web.equivalent.D0003=11075
+gmd.offer.web.equivalent.D0004=11073
+gmd.offer.web.equivalent.D0005=11074
+
+gmd.offer.efl.equivalent.D0001=090175168088b0ce
+gmd.offer.efl.equivalent.D0002=090175168088b0cf
+gmd.offer.efl.equivalent.D0003=090175168088b0d2
+gmd.offer.efl.equivalent.D0004=090175168088b0d0
+gmd.offer.efl.equivalent.D0005=090175168088b0d1
+
+
+gmd.offer.tos.equivalent.D0001=090175168088b0cd
+gmd.offer.tos.equivalent.D0002=090175168088b0cd
+gmd.offer.tos.equivalent.D0003=090175168088b0cd
+gmd.offer.tos.equivalent.D0004=090175168088b0cd
+gmd.offer.tos.equivalent.D0005=090175168088b0cd
+
+
+gmd.offer.yraac.equivalent.D0001=0901751880ebff66
+gmd.offer.yraac.equivalent.D0002=0901751880ebff66
+gmd.offer.yraac.equivalent.D0003=0901751880ebff66
+gmd.offer.yraac.equivalent.D0004=0901751880ebff66
+gmd.offer.yraac.equivalent.D0005=0901751880ebff66
+
+gmd.offer.predis.equivalent.D0001=090175168088b0cc
+gmd.offer.predis.equivalent.D0002=090175168088b0cc
+gmd.offer.predis.equivalent.D0003=090175168088b0cc
+gmd.offer.predis.equivalent.D0004=090175168088b0cc
+gmd.offer.predis.equivalent.D0005=090175168088b0cc
+
+######################For GMD APP ENDS####################
 
 
 
@@ -200,8 +259,27 @@ gmd_price_current_date =04/14/2020
 content.server.endpoint.url=http://txaixebnbld01.retail.nrgenergy.com:18081/client/v2/content.svc/
 #File
 documentum.endpoint=https://dev-texas.xoomenergy.com/files/{0}.pdf
+documentum.efl.endpoint=https://dev-texas.xoomenergy.com{0}
 custom.inv.error.message=We're sorry, but we were unable to retrieve your document. Please try again later.
 doc.inv.url.timeout=20
+
+duplicate.payment.check =X
+
+ws.rest.iot.ercot.check.by.address.url=http://txaixsexbls05/iotproxy/ercot/getByAddress
+# Adode Analytics
+adobe.analytic.template.url=https://reliantenergy.sc.omtrdc.net/b/ss/[ReportSuite]/0?
+template.url.query.list.parameter.one=AQB=1&ndh=1&pageName=myaccount:swap:notification&ch=App%20API&server=api.[BRAND].com&vid=[CANumber]&c.&mycocode=[CompanyCode]&myca=[CANumber]&mymsgid=[MsgId]
+template.url.query.list.parameter.two=&myreaddt=[ActionDate]&mymsgtype=[MessageType]&mymsgcat=[MessageCat]&mymsg=[Message]&mymsgstatus=[MsgStatus]&mylang=[Language]&myos=[OSType]&mycontractid=[ContractId]&mybp=[BPNumber]&msginstance=[msgInstance]&myerrmsg=[ErrorMessage]&.c&AQE=1
+template.url.parameter.reportsuite=relengmemobile.appstage
+iot.post.url = http://txaixsexbls05/iotproxy/postServiceRequestURL
+adobe.messageId.message = Your contract will expire on [date].Log on to find clean electricity plans available for you
+
+0121.web.url=https://stg1-www.reliant.com
+0271.web.url=https://stg-signup.greenmountain.com
+#0391.web.url=https://www.pennywisepower.com
+0391.web.url=https://stg-www.discountpowertx.com
+0391.CE.web.url=https://stg-signup.cirroenergy.com
+0400.web.url=https://stg-www.everythingenergytx.com
 
 # Lucene Search Engine Index Files Directory Location
 lucene.indexed.dir=/apps01/files/stream/address/lucene
