added DE relevant code changes for evident cases

--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -43,14 +43,20 @@ utility.logging=true
 0391=Discount Power
 0400=Everything Energy
 0586=XM
+#Fixed: DE: Added DE Company Code, need review
+0315=DE
 
 
-#TODO: DE: Add URL for DE New Occupant Confirmation
+
 
 url.new.occupant.confirmation.form.reliant=https://www.reliant.com/en/residential/customer-care/new_occupant_confirmation.jsp
 url.new.occupant.confirmation.form.gme=https://signup.greenmountain.com/en_US/images/GME%20-%20New%20Occupant%20Conf%20Form%20EN_web.pdf
 url.new.occupant.confirmation.form.cirro=https://signup.cirroenergy.com/en_US/images/switch_hold_details_en.pdf
 url.new.occupant.confirmation.form.pennywise=https://www.pennywisepower.com/en_US/SupportingDocuments/New_Occupant_Confirmation_Form.pdf
+
+#FIXED: DE: Added key for DE New Occupant Confirmation URL
+#TODO: DE: Populate the key with DE endpoint URL
+url.new.occupant.confirmation.form.de=
 
 0121.web.url=https://www.reliant.com
 0271.web.url=https://signup.greenmountain.com
