--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=20.8.0
-release.title=Sales NoSSNDL, DL Digits Fix and middlename changes
-release.description=Sales NoSSNDL, DL Digits Fix and middlename changes
-release.date=05/18/2021
+release.version=20.9.0
+release.title=DPP Installment Update
+release.description=DPP Installmet Update
+release.date=06/10/2021
