--- a/src/main/resources/properties/appConstants.properties
+++ b/src/main/resources/properties/appConstants.properties
@@ -64,6 +64,10 @@ url.new.occupant.confirmation.form.de=
 0391.web.url=https://www.discountpowertx.com
 0391.CE.web.url=https://signup.cirroenergy.com
 0400.web.url=https://www.everythingenergytx.com
+
+#TODO: DE: Populate the key with DE endpoint URL
+0315.web.url=
+
 serviced.tdsp.codes=D0001,D0002,D0003,D0004,D0005,D0009
 
 
