added DE specific changes and comments for more methods and props

--- a/src/main/resources/properties/environment.properties
+++ b/src/main/resources/properties/environment.properties
@@ -281,5 +281,8 @@ adobe.messageId.message = Your contract will expire on [date].Log on to find cle
 0391.CE.web.url=https://stg-signup.cirroenergy.com
 0400.web.url=https://stg-www.everythingenergytx.com
 
+#TODO: DE: Add DE Web URL
+0315.web.url=
+
 # Lucene Search Engine Index Files Directory Location
 lucene.indexed.dir=/apps01/files/stream/address/lucene
