--- a/release.properties
+++ b/release.properties
@@ -1,4 +1,4 @@
-release.version=20.9.0
-release.title=DPP Installment Update
-release.description=DPP Installmet Update
-release.date=06/10/2021
+release.version=20.10.0
+release.title=Sales submitUCCData and agent id validation in Identity Call
+release.description=Sales submitUCCData and agent id validation in Identity Call
+release.date=06/15/2021
